# card-tracker

./: .gitignore  AGENT_TEAM_SUMMARY.md  DASHBOARD_ERROR_FIX.md  DASHBOARD_NAN_FIX.md  DEBUG_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_RENDER.md  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_SUPABASE.md  DEPLOYMENT_VERCEL.md  ENVIRONMENT_VARIABLES.md  FINAL_STATUS.md  INTEGRATION_FIXES_APPLIED.md  INTEGRATION_QUICK_REFERENCE.md  INTEGRATION_STATUS.md  INTEGRATION_TEST_REPORT.md  LOCAL_TESTING_GUIDE.md  LOGIN_PAGE_STATUS.md  OPERATIONS.md  QUICK_DEPLOY_GUIDE.md  QUICK_START.md  README.md  READY_TO_TEST.md  TESTING_GUIDE.md  TEST_RESULTS.md  TOKEN_SET.md  TROUBLESHOOTING.md  UV_USAGE.md  integration_test.py  render.yaml
backend/: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  PHASE6_POLISH_SUMMARY.md  QUICK_START_PRODUCTION.md  README.md  build.sh  manage.py  pyproject.toml  render.yaml  requirements.txt  test_api.py
backend/card_tracker/: adapters.py  asgi.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
backend/cards/: admin.py  models.py  serializers.py  urls.py  views.py
backend/cards/data/: card_seeds.py
backend/cards/management/commands/: seed_cards.py  send_reminders.py  setup_oauth.py  update_benefits.py
backend/cards/migrations/: 0001_initial.py  0002_usercard_credit_limit_cents.py  0003_usercard_card_type.py  0004_add_userprofile.py
backend/cards/services/: card_lookup.py  deadlines.py  periods.py  tracking.py
frontend/: CLAUDE.md  README.md  package-lock.json  package.json  vercel.json
frontend/app/: error.tsx  globals.css  (+3 more)
(+31 files in other folders)
